[[whats-new-part]]
= What's New?

[[spring-integration-intro-new]]
For those who are already familiar with Spring Integration, this chapter provides a brief overview of the new features of version 6.5.

If you are interested in the changes and features that were introduced in earlier versions, see the xref:history.adoc[Change History].

[[what-s-new-in-spring-integration-6-5]]
== What's New in Spring Integration 6.5?

If you are interested in more details, see the Issue Tracker tickets that were resolved as part of the 6.5 development process.

In general the project has been moved to the latest dependency versions.

[[x6.5-general]]
== General Changes

The deprecated previously usage of `org.springframework.util.concurrent.ListenableFuture` has been removed in favor of `CompletableFuture`.
