@@ -4978,13 +4978,12 @@ The list of component name patterns you want to track (e.g.,  tracked-components
 			]]></xsd:documentation>
 		</xsd:annotation>
 		<xsd:attribute name="id" type="xsd:string"/>
-		<xsd:attribute name="use-registry" type="xsd:boolean" default="false">
+		<xsd:attribute name="use-registry" type="xsd:boolean">
 			<xsd:annotation>
 				<xsd:documentation>
-					Set true to make Control Bus based on the global 'ControlBusCommandRegistry'
-					which is a recommended way to configure Control Bus functionality.
-					The false is by default for backward compatibility and is deprecated.
-					This attribute will be true by default in the next major version and removed altogether eventually.
+					[DEPRECATED]
+					The attribute is out of use since 6.5 and 'ControlBusCommandRegistry' is always configured.
+					Will be removed in the next version.
 				</xsd:documentation>
 			</xsd:annotation>
 		</xsd:attribute>
