@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<beans:beans xmlns="http://www.springframework.org/schema/integration" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns:beans="http://www.springframework.org/schema/beans" xmlns:groovy="http://www.springframework.org/schema/integration/groovy"
-	xsi:schemaLocation="http://www.springframework.org/schema/integration
+<beans:beans xmlns="http://www.springframework.org/schema/integration"
+			 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+			 xmlns:beans="http://www.springframework.org/schema/beans"
+			 xsi:schemaLocation="http://www.springframework.org/schema/integration
 		https://www.springframework.org/schema/integration/spring-integration.xsd
 		http://www.springframework.org/schema/beans
 		https://www.springframework.org/schema/beans/spring-beans.xsd">
@@ -14,6 +15,6 @@
 		<control-bus/>
 	</chain>
 
-	<beans:bean id="service" class="org.springframework.integration.config.xml.ControlBusChainTests$Service" />
+	<beans:bean id="service" class="org.springframework.integration.config.xml.ControlBusChainTests$Service"/>
 
 </beans:beans>
