@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,17 +16,17 @@
 
 package org.springframework.integration.config.xml;
 
-import java.util.Date;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.integration.IntegrationMessageHeaderAccessor;
 import org.springframework.integration.support.MessageBuilder;
 import org.springframework.jmx.export.annotation.ManagedOperation;
 import org.springframework.messaging.Message;
 import org.springframework.messaging.MessageChannel;
 import org.springframework.messaging.PollableChannel;
-import org.springframework.messaging.support.GenericMessage;
 import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.junit.jupiter.SpringJUnitConfig;
 
@@ -47,13 +47,13 @@ public class ControlBusChainTests {
 	private PollableChannel output;
 
 	@Test
-	public void testDefaultEvaluationContext() {
+	public void controlBusInChain() {
 		Message<?> message =
-				MessageBuilder.withPayload("@service.convert('aardvark')+headers.foo")
-						.setHeader("foo", "bar")
+				MessageBuilder.withPayload("service.convert")
+						.setHeader(IntegrationMessageHeaderAccessor.CONTROL_BUS_ARGUMENTS, List.of("data"))
 						.build();
 		this.input.send(message);
-		assertThat(output.receive(0).getPayload()).isEqualTo("catbar");
+		assertThat(output.receive(0)).extracting(Message::getPayload).isEqualTo("some data");
 		assertThat(output.receive(0)).isNull();
 	}
 
@@ -61,15 +61,7 @@ public class ControlBusChainTests {
 
 		@ManagedOperation
 		public String convert(String input) {
-			return "cat";
-		}
-
-	}
-
-	public static class AdapterService {
-
-		public Message<String> receive() {
-			return new GenericMessage<>(new Date().toString());
+			return "some " + input;
 		}
 
 	}
