@@ -1,5 +1,5 @@
 /*
- * Copyright 2016-2024 the original author or authors.
+ * Copyright 2016-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -636,7 +636,7 @@ public class IntegrationFlowTests {
 		@Bean
 		public IntegrationFlow controlBusFlow() {
 			return IntegrationFlow.from(ControlBusGateway.class, (gateway) -> gateway.beanName("controlBusGateway"))
-					.controlBusOnRegistry((endpoint) -> endpoint.id("controlBus"))
+					.controlBus((endpoint) -> endpoint.id("controlBus"))
 					.get();
 		}
 
